--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,7 @@
 	<string name="dialog_result">Result</string>
 	<string name="dialog_result_copy_btn">Copy to clipboard</string>
 
+	<!-- Network Adb -->
+	<string name="network_adb_tile_label">Adb Over LAN</string>
+
 </resources>
